--- a/package.json
+++ b/package.json
@@ -17,10 +17,12 @@
     "@nuxtjs/tailwindcss": "^6.13.1",
     "@pinia/nuxt": "^0.9.0",
     "@radix-icons/vue": "^1.0.0",
+    "@tanstack/vue-query": "^5.66.0",
     "@vueuse/core": "^12.5.0",
     "appwrite": "^16.1.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "dayjs": "^1.11.13",
     "nuxt": "^3.15.3",
     "pinia": "^2.3.1",
     "radix-vue": "^1.9.12",
