--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@pinia/nuxt": "^0.9.0",
     "@radix-icons/vue": "^1.0.0",
     "@tanstack/vue-query": "^5.66.0",
+    "@vee-validate/nuxt": "^4.15.0",
     "@vueuse/core": "^12.5.0",
     "appwrite": "^16.1.0",
     "class-variance-authority": "^0.7.1",
@@ -30,6 +31,7 @@
     "tailwind-merge": "^2.6.0",
     "tailwindcss-animate": "^1.0.7",
     "uuid": "^11.0.5",
+    "vee-validate": "^4.15.0",
     "vue": "latest",
     "vue-router": "latest"
   },
